# yt-plex

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml  mise.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  models.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  db.rs  lib.rs  main.rs  plex.rs  sync.rs  template.rs  worker.rs  ws.rs
crates/server/src/routes/: assets.rs  auth.rs  channels.rs  jobs.rs  mod.rs  profiles.rs  settings.rs  thumbnails.rs  videos.rs
docs/: deployment.md  todo.md
docs/superpowers/plans/: 2026-04-04-yt-plex.md  2026-04-05-channel-browser.md  2026-04-05-download-progress.md  2026-04-05-google-oauth.md  2026-04-05-user-profiles.md  2026-04-06-yt-plex-redesign.md  2026-04-09-confirm-dialog-toast.md
docs/superpowers/plans/completed/: 2026-04-05-google-oauth.md  2026-04-05-video-enhancements.md
docs/superpowers/specs/: 2026-04-04-yt-plex-design.md  2026-04-05-channel-browser-design.md  2026-04-05-google-oauth-design.md  2026-04-06-yt-plex-redesign-design.md  2026-04-09-confirm-dialog-toast-design.md  2026-04-09-per-channel-path-prefix-design.md
scripts/: komodo-deploy.sh
web/: README.md  package-lock.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.html
web/src/lib/: api.ts  confirm.ts  navSearch.ts  prefs.ts  toast.ts  ws.ts
web/src/lib/components/: Badge.svelte  Button.svelte  ChannelForm.svelte  ConfirmDialog.svelte  EmptyState.svelte  Input.svelte  PageHeader.svelte  Toaster.svelte
web/src/lib/styles/: theme.css
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/admin/: +page.svelte
web/src/routes/browse/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/preferences/: +page.svelte
web/src/routes/queue/: +page.svelte
web/src/routes/select-profile/: +page.svelte
web/src/routes/settings/: +page.svelte
(+2 files in other folders)
