[package]
name = "yt-plex-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yt-plex"
path = "src/main.rs"

[lib]
name = "yt_plex_server"
path = "src/lib.rs"

[dependencies]
yt-plex-common = { path = "../common" }
anyhow         = { workspace = true }
clap           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }

axum           = { version = "0.8", features = ["ws", "macros"] }
tower-http     = { version = "0.6", features = ["trace", "cors"] }
cookie         = "0.18"
async-trait    = "0.1"
rusqlite       = { version = "0.31", features = ["bundled"] }
rand           = "0.8"
hex            = "0.4"
urlencoding    = "2"
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile       = "3"
rust-embed     = { version = "8", features = ["axum"] }
mime_guess     = "2"
tokio-stream   = { version = "0.1", features = ["sync"] }
walkdir        = "2"
[dev-dependencies]
tempfile = "3"
